// Copyright 2018 The Kubeflow Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/kubeflow/pipelines/backend/api/v2beta1/go_client";
package api;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "backend/api/v2beta1/error.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
  // Use bearer token for authorizing access to job service.
  // Kubernetes client library(https://kubernetes.io/docs/reference/using-api/client-libraries/)
  // uses bearer token as default for authorization. The section below
  // ensures security definition object is generated in the swagger definition.
  // For more details see https://github.com/OAI/OpenAPI-Specification/blob/3.0.0/versions/2.0.md#securityDefinitionsObject
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "Bearer";
      value: {};
    }
  }
};

service RunService {
  // Creates a new run in the experiment specified by the experiment ID. If experiment ID is not specified, the run is created in the default experiment.
  rpc CreateRun(CreateRunRequest) returns (Run) {
    option (google.api.http) = {
      post: "/apis/v2beta1/experiments/{run.experiment_id}/runs"
      body: "run"
    };
  }

  // Finds a specific run by ID.
  rpc GetRun(GetRunRequest) returns (Run) {
    option (google.api.http) = {
      get: "/apis/v2beta1/runs/{run_id}"
    };
  }

  // Find all runs in an experiment given experiment id. Finds all runs across all experiments if experiment id is not specified.
  rpc ListRuns(ListRunsRequest) returns (ListRunsResponse) {
    option (google.api.http) = {
      get: "/apis/v2beta1/runs"
    };
  }

  // Archives a run.
  rpc ArchiveRun(ArchiveRunRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/apis/v2beta1/runs/{run_id}:archive"
    };
  }

  // Restores an archived run.
  rpc UnarchiveRun(UnarchiveRunRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/apis/v2beta1/runs/{run_id}:unarchive"
    };
  }

  // Deletes a run.
  rpc DeleteRun(DeleteRunRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v2beta1/runs/{run_id}"
    };
  }

  // ReportRunMetrics reports metrics of a run. Each metric is reported in its
  // own transaction, so this API accepts partial failures. Metric can be
  // uniquely identified by (run_id, node_id, name). Duplicate reporting will be
  // ignored by the API. First reporting wins.
  rpc ReportRunMetrics(ReportRunMetricsRequest)
      returns (ReportRunMetricsResponse) {
    option (google.api.http) = {
      post: "/apis/v2beta1/runs/{run_id}:reportMetrics"
      body: "*"
    };
  }

  // Finds a run's artifact data.
  rpc ReadArtifact(ReadArtifactRequest) returns (ReadArtifactResponse) {
    option (google.api.http) = {
      get: "/apis/v2beta1/runs/{run_id}/nodes/{node_id}/artifacts/{artifact_name}:read"
    };
  }

  // Terminates an active run.
  rpc TerminateRun(TerminateRunRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/apis/v2beta1/runs/{run_id}:terminate"
    };
  }

}

message Run {
  // Output. Unique Run ID. Generated by API server.
  string run_id = 1;
 
  // Required input field. Name provided by user,
  // or auto generated if Run is created by scheduled job. Not unique.
  string display_name = 2;
 
  // Output. Specifies whether this run is in archived or available mode.
  StorageState storage_state = 3;
 
  // Optional input field. Describing the purpose of the Run.
  string description = 4;
 
  // Required input field. Specifies the source of the pipeline spec for this 
  // run. Can be either a pipeline id, or a pipeline spec.
  oneof pipeline_source {
    // The ID of the pipeline user uploaded before.
    string pipeline_id = 5;

    // The pipeline spec.
    google.protobuf.Struct pipeline_spec = 6;
  }
 
  // Runtime config of the pipeline. 
  RuntimeConfig runtime_config = 7;
 
  // Optional input field. Specifies which Kubernetes service account this run uses.
  string service_account = 8;
 
  // Output. The time the run was created.
  google.protobuf.Timestamp created_at = 9;
 
  // Output. When this run is scheduled to run. This could be different from
  // created_at. For example, if a run is from a backfilling job that was
  // supposed to run 2 month ago, the scheduled_at is 2 month ago,
  // v.s. created_at is the current time.
  google.protobuf.Timestamp scheduled_at = 10;
 
  // Output. The time this run is finished.
  google.protobuf.Timestamp finished_at = 11;

  // Output. State of a Run.
  RuntimeState state = 12;
 
  // In case any error happens retrieving a run field, only run ID
  // and the error message is returned. Client has the flexibility of choosing
  // how to handle error. This is especially useful during listing call.
  Error error = 13;
 
  // Namespace this run belongs to.
  string namespace = 14;
 
  // Id of the experiment this run belongs to.
  string experiment_id = 15;
 
  // Output. The runtime details of a Run.
  RunDetails run_details = 16;

  // Output. A list of Run statuses. This field keeps a record of status
  // evolving over time.
  // Being discussed. Planned as a P1 feature.
  repeated RuntimeStatus state_history = 17;
}

// Describes whether an entity is available or archived.
enum StorageState {
  // Default state. This state in not used
  STORAGESTATE_UNSPECIFIED = 0;

  // Entity is available.
  AVAILABLE = 1;

  // Entity is archived.
  ARCHIVED = 2;
}

// Describes the state of a runtime entity.
enum RuntimeState {
  // Default value. This value is not used.
  RUNTIMESTATE_UNSPECIFIED = 0;

  // Service is preparing to run an entity.
  PENDING = 1;

  // Entity is in progress.
  RUNNING = 2;

  // Entity completed successfully.
  SUCCEEDED = 3;

  // Entity has been skipped.
  SKIPPED = 4;

  // Entity failed.
  FAILED = 5;

  // Entity is being canceled. From this state, an entity may only go
  // to either SUCCEEDED, FAILED or CANCELED.
  CANCELING = 6;

  // Entity has been canceled.
  CANCELED = 7;

  // Entity has been stopped, and can be resumed.
  PAUSED = 8;
}

// Timestamped representation of a state with an optional error.
message RuntimeStatus {
  // Update time of this state.
  google.protobuf.Timestamp update_time = 1;

  // The state of a runtime instance.
  RuntimeState state = 2;

  // The error that occurred during the state. May be set when the state is
  // any of the non-final states (PENDING/RUNNING/CANCELING) or FAILED state.
  // If the state is FAILED, the error here is final and not going to be
  // retried.
  // If the state is a non-final state, the error indicates a system-error
  // being retried.
  Error error = 3;
}

// The runtime config.
message RuntimeConfig {
  // The runtime parameters of the Pipeline. The parameters will be
  // used to replace the placeholders at runtime.
  map<string, google.protobuf.Value> parameters = 1;

  // A path in a object store bucket which will be treated as the root
  // output directory of the pipeline. It is used by the system to
  // generate the paths of output artifacts. 
  // Ref:(https://www.kubeflow.org/docs/components/pipelines/pipeline-root/)
  string pipeline_root = 2;
}

message RunMetric {
  // Required. The user defined name of the metric. It must between 1 and 63
  // characters long and must conform to the following regular expression:
  // `[a-z]([-a-z0-9]*[a-z0-9])?`.
  string display_name = 1;

  // Required. The runtime node ID which reports the metric. The node ID can be
  // found in the RunDetail.workflow.Status. Metric with same (node_id, name)
  // are considerd as duplicate. Only the first reporting will be recorded. Max
  // length is 128.
  string node_id = 2;

  oneof value {
    // The number value of the metric.
    double number_value = 3;
  }

  enum Format {
    // Default value if not present.
    FORMAT_UNSPECIFIED = 0;
    
    // Display value as its raw format.
    RAW = 1;
    
    // Display value in percentage format.
    PERCENTAGE = 2;
  }

  // The display format of metric.
  Format format = 4;
}

// The runtime details of a Run.
message RunDetails {
  // The context id of the pipeline.
  int64 pipeline_context_id = 1;

  // The context id of the current Run.
  int64 pipeline_run_context_id = 2;

  // The runtime details of the tasks under the Run.
  repeated PipelineTaskDetail task_details = 3;
}

// The runtime detail of a task execution.
message PipelineTaskDetail {
  // The system generated ID of the task.
  string task_id = 1;

  // The id of the parent task if the task is within a component scope.
  // Empty if the task is at the root level.
  string parent_task_id = 12;

  // The user specified name of the task that is defined in
  // [Pipeline.spec][].
  string task_name = 2;

  // Task create time.
  google.protobuf.Timestamp create_time = 3;

  // Task start time.
  google.protobuf.Timestamp start_time = 4;

  // Task end time.
  google.protobuf.Timestamp end_time = 5;

  // The detailed execution info.
  PipelineTaskExecutorDetail executor_detail = 6;

  // State of the task.
  RuntimeState state = 7;

  // The execution metadata of the task.
  int64 execution_id = 8;

  // The error that occurred during task execution.
  // Only populated when the task's state is FAILED or CANCELED.
  Error error = 9;

  // The runtime input artifacts of the task.
  map<string, ArtifactList> inputs = 10;

  // The runtime output artifacts of the task.
  map<string, ArtifactList> outputs = 11;

  // A list of task statuses. This field keeps a record of task status evolving
  // over time.
  repeated RuntimeStatus state_history = 13;
}

// The runtime detail of a PipelineTask executor.
message PipelineTaskExecutorDetail {
  // The name of the job for the main container execution.
  string main_job = 1;

  // The name of the job for the pre-caching-check container
  // execution. This job will be available if the
  // Run.pipeline_spec specifies the `pre_caching_check` hook in
  // the lifecycle events.
  string pre_caching_check_job = 2;

  // The names of the previously failed job for the main container
  // executions. The list includes the all attempts in chronological order.
  repeated string failed_main_jobs = 3;

  // The names of the previously failed job for the
  // pre-caching-check container executions. This job will be available if the
  // Run.pipeline_spec specifies the `pre_caching_check` hook in
  // the lifecycle events.
  // The list includes the all attempts in chronological order.
  repeated string failed_pre_caching_check_jobs = 4;
}


// A list of artifact metadata.
message ArtifactList {
  // A list of artifact metadata ids.
  repeated int64 artifact_ids = 1;
}

message CreateRunRequest {
  Run run = 1;
}

message GetRunRequest {
  // The ID of the run to be retrieved.
  string run_id = 1;
}

message ListRunsRequest {
  // A page token to request the next page of results. The token is acquired
  // from the nextPageToken field of the response from the previous
  // ListRuns call or can be omitted when fetching the first page.
  string page_token = 1;

  // The number of runs to be listed per page. If there are more runs than this
  // number, the response message will contain a nextPageToken field you can use
  // to fetch the next page.
  int32 page_size = 2;

  // Can be format of "field_name", "field_name asc" or "field_name desc"
  // (Example, "name asc" or "id desc"). Ascending by default.
  string sort_by = 3;

  // Optional input field. Filters based on the namespace.
  string namespace = 4;

  // A url-encoded, JSON-serialized Filter protocol buffer (see
  // [filter.proto](https://github.com/kubeflow/pipelines/blob/master/backend/api/filter.proto)).
  string filter = 5;

  // The ID of the experiment to be retrieved. If empty, list runs across all experiments.
  string experiment_id = 6;
}

message TerminateRunRequest {
  // The ID of the run to be terminated.
  string run_id = 1;
}

message ListRunsResponse {
  // List of runs.
  repeated Run runs = 1;

  // The total number of runs for the given query.
  int32 total_size = 2;

  // The token to list the next page of runs.
  string next_page_token = 3;
}

message ArchiveRunRequest {
  // The ID of the run to be archived.
  string run_id = 1;
}

message UnarchiveRunRequest {
  // The ID of the run to be restored.
  string run_id = 1;
}

message DeleteRunRequest {
  // The ID of the run to be deleted.
  string run_id = 1;
}

message ReportRunMetricsRequest {
  // Required. The parent run ID of the metric.
  string run_id = 1;

  // List of metrics to report.
  repeated RunMetric metrics = 2;
}

message ReportRunMetricsResponse {
  // Output. The name of the metric.
  string metric_name = 1;

  // Output. The ID of the node which reports the metric.
  string metric_node_id = 2;

  // Returned status of the metric.
  enum MetricStatus {
    // Default value if not present.
    METRICSTATUS_UNSPECIFIED = 0;

    // Indicates successful reporting.
    OK = 1;

    // Indicates that the payload of the metric is invalid.
    INVALID_ARGUMENT = 2;

    // Indicates that the metric has been reported before.
    DUPLICATE_REPORTING = 3;

    // Indicates that something went wrong in the server.
    INTERNAL_ERROR = 4;
  }

  // Output. The status of the metric reporting.
  MetricStatus status = 3;

  // Output. The detailed message of the error of the reporting.
  string message = 4;
}

message ReadArtifactRequest {
  // The ID of the run.
  string run_id = 1;

  // The ID of the running node.
  string node_id = 2;

  // The name of the artifact.
  string artifact_name = 3;
}

message ReadArtifactResponse {
  // The bytes of the artifact content.
  bytes data = 1;
}